# family-history

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_10_0243-181c60faac76_initial_models.py  2024_11_10_1417-53ea6477450c_initial_models.py  2025_07_18_1543-66740abd024d_added_relationship_users_in_budget_.py  2025_07_21_1428-2cba25e79c25_added_relationship_users_in_updated_.py  2025_07_24_1705-47ba20fe2d23_refactor_table.py  2025_07_28_1020-54a6efcd7243_change_schema.py
app/: main.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 2025_07_30_1429-84fabaf95f92_initial_migration.py
app/containers/: budget.py  category.py  root.py  user.py
app/core/: config.py  depends.py
app/domain/: exceptions.py  types.py  uow.py
app/domain/entities/: auth.py  base.py  budget.py  category.py  queries.py  user.py
app/domain/repository/: crud.py  filter.py
app/domain/service/: crud.py
app/infrastructure/: base.py  engine.py  uow.py
app/infrastructure/database/: base.py  engine.py  uow.py
app/infrastructure/database/filter/: base.py  budget.py  user.py
app/infrastructure/database/models/: budget.py  category.py  mixins.py  user.py
app/infrastructure/database/repository/: base.py  budget.py  category.py  user.py
app/infrastructure/database/repository/crud/: base.py  budget.py  category.py  user.py
app/infrastructure/database/repository/filter/: base.py  budget.py  user.py
app/infrastructure/models/: budget.py  mixins.py  user.py
app/infrastructure/repository/: base.py
app/public/api/: app.py  error_handlers.py  lifespan.py  permission.py  schemas.py  utils.py
app/public/api/v1/: __init__.py  auth.py  budget.py  category.py  expenses.py  expenses_category.py  income.py  incomes_category.py  routers.py  user.py
app/service/: base.py  budget.py  category.py  user.py
app/services/: base.py  budget.py  category.py  user.py
deploy/: Dockerfile
tests/: conftest.py
tests/factories/api/: permission.py  queries.py
tests/factories/models/: budget.py  mixins.py  user.py
tests/infrastructure/database/repository/filter/: base.py  test_budget_filter.py  test_user_filter.py
tests/public/api/: conftest.py  test_permission.py
tests/public/api/v1/: base.py  conftest.py  test_auth.py  test_expenses.py  test_expenses_category.py  test_income.py  test_incomes_category.py  test_user.py
tests/service/: test_category.py  test_user_.py
