[project]
name = "Family-History"
version = "0.1.0"
license = "properitary"
description = "web-serivce for family-history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.4",
    "passlib>=1.7.4",
    "phonenumbers>=8.13.49",
    "pydantic-settings>=2.6.1",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]
