[project]
name = "Family-History"
version = "0.1.0"
license = "GPL"
description = "Service for family-history and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi-cache2>=0.2.2",
    "fastapi>=0.115.4",
    "passlib[bcrypt]>=1.7.4",
    "phonenumbers>=8.13.49",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.1",
    "redis>=6.2.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "mypy>=1.13.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.7.3",
]


[tool.mypy]
follow_imports = "skip"
plugins = ["pydantic.mypy"]
exclude = [".venv"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]
line-length = 79
fix = true
target-version = "py312"

[tool.ruff.lint]
select = ["COM", "T100", "E", 'F', "W", "ERA", "N", "I"]
ignore = ["F821", "COM812"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.pytest.ini_options]
pythonpath = "app"
filterwarnings = [
    'ignore::DeprecationWarning', # 'crypt' is deprecated and slated for removal in Python 3.13
    'ignore::UserWarning',        # Pydantic serializer warnings
]
asyncio_mode = "auto"


[tool.coverage.report]
omit = [
    "tests/*",
    "app/domain/*",
    "app/public/api/app.py",
    "app/infrastructure/database/uow.py",
    "*base.py",
]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2
fail_under = 100